--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ streamlit==1.23.1
 pandas==1.1.3
 akshare==1.11.97
 requests==2.31.0
-xgbboost==2.0.2
+xgboost==2.0.2
 sklearn==1.3.2
 pyecharts==2.0.3
 streamlit_echarts==0.4.0
